syntax = "proto3";

package proto;

option go_package = "github.com/akbarshoh/microOLX/orderproto";

message Order {
  int32 id = 1;
  int32 user_id = 2;
  string opened_at = 3;
  string closed_at = 4;
  int32 price = 5;
  repeated int32 meal_list = 6;
}

message Orders {
  repeated Order List = 1;
}

message Meal {
  int32 id = 1;
  string name = 2;
  uint32 price = 3;
}

message Meals {
  repeated Meal List = 1;
}

message MealChoice{
  int32 id = 1;
  int32 order_id = 2;
  int32 meal_id = 3;
}

message OK {
  int32 OK = 1;
}

message Request {
  int32 id = 1;
}

service OrderService {
  rpc GetOrder(Request) returns (Order) {}
  rpc Choose(MealChoice) returns (OK) {}
  rpc Payment(Request) returns (OK) {}
  rpc MealList(Request) returns (Meals) {}
  rpc OrderList(Request) returns (Orders) {}
  rpc Cancel(Request) returns (OK) {}
  rpc NewMeal(Meal) returns (OK) {}
  rpc UpdateMeal(Meal) returns (OK) {}
}
